<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <data>
        <variable name="vm" type="com.example.carsensorapp.ui.usedcardetail.UsedCarDetailViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.usedcardetail.UsedCarDetailFragment"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:imageUrl="@{vm.usedCar.photoLargeUrl}"
                />
        </LinearLayout>
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            >
            <TableRow
                android:weightSum="2"
                android:background="@drawable/border_table"
                >
                <TextView
                    android:layout_weight="0.2"
                    android:text="@string/brand"
                    />
                <TextView
                    android:layout_weight="1.8"
                    android:text="@{vm.usedCar.brandName}"
                    />
            </TableRow>
            <TableRow
                android:weightSum="2"
                android:background="@drawable/border_table"
                >
                <TextView
                    android:layout_weight="0.2"
                    android:text="@string/model"
                    />
                <TextView
                    android:layout_weight="1.8"
                    android:text="@{vm.usedCar.model}"
                    />
            </TableRow>
            <TableRow
                android:weightSum="2"
                android:background="@drawable/border_table"
                >
                <TextView
                    android:layout_weight="0.2"
                    android:text="@string/grade"
                    />
                <TextView
                    android:layout_weight="1.8"
                    android:text="@{vm.usedCar.grade}"
                    />
            </TableRow>
            <TableRow
                android:weightSum="2"
                android:background="@drawable/border_table"
                >
                <TextView
                    android:layout_weight="0.2"
                    android:text="@string/price"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.8"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{vm.usedCar.price}"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/yen"
                        />
                </LinearLayout>
            </TableRow>
            <TableRow
                android:weightSum="2"
                android:background="@drawable/border_table"
                >
                <TextView
                    android:layout_weight="0.2"
                    android:text="@string/car_width"
                    />
                <TextView
                    android:layout_weight="1.8"
                    android:text="@{vm.usedCar.width.toString()}"
                    />
            </TableRow>
            <TableRow
                android:weightSum="2"
                android:background="@drawable/border_table"
                >
                <TextView
                    android:layout_weight="0.2"
                    android:text="@string/car_height"
                    />
                <TextView
                    android:layout_weight="1.8"
                    android:text="@{vm.usedCar.height.toString()}"
                    />
            </TableRow>
            <TableRow
                android:weightSum="2"
                android:background="@drawable/border_table"
                >
                <TextView
                    android:layout_weight="0.2"
                    android:text="@string/car_length"
                    />
                <TextView
                    android:layout_weight="1.8"
                    android:text="@{vm.usedCar.length.toString()}"
                    />
            </TableRow>
            <TableRow
                android:weightSum="2"
                android:background="@drawable/border_table"
                >
                <TextView
                    android:layout_weight="0.2"
                    android:text="@string/period"
                    />
                <TextView
                    android:layout_weight="1.8"
                    android:text="@{vm.usedCar.period}"
                    />
            </TableRow>
            <TableRow
                android:weightSum="2"
                android:background="@drawable/border_table"
                >
                <TextView
                    android:layout_weight="0.2"
                    android:text="@string/series"
                    />
                <TextView
                    android:layout_weight="1.8"
                    android:text="@{vm.usedCar.series}"
                    />
            </TableRow>
            <TableRow
                android:weightSum="2"
                android:background="@drawable/border_table"
                >
                <TextView
                    android:layout_weight="0.2"
                    android:text="@string/body_type"
                    />
                <TextView
                    android:layout_weight="1.8"
                    android:text="@{vm.usedCar.bodyName}"
                    />
            </TableRow>
            <TableRow
                android:weightSum="2"
                android:background="@drawable/border_table"
                >
                <TextView
                    android:layout_weight="0.2"
                    android:text="@string/url"
                    />
                <TextView
                    android:layout_weight="1.8"
                    android:autoLink="web"
                    android:text="@{vm.usedCar.mobileUrl}"
                    />
            </TableRow>
        </TableLayout>

    </LinearLayout>

</layout>